--- a/src/Server/Messenger.vcxproj.filters
+++ b/src/Server/Messenger.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Resource Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Server.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
