--- a/src/MessengerServer/MessengerServer.vcxproj.filters
+++ b/src/MessengerServer/MessengerServer.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="Deserialization.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Serialization.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Database.cpp">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClCompile>
     <ClCompile Include="Deserialization.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Serialization.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
